--- a/progress.html
+++ b/progress.html
@@ -401,7 +401,7 @@ overflow-x: hidden;
                 </div>
               </div>
             </div>
-            <div v-if="Workouts" class="content-block awards">
+            <div v-if="Workouts && Awards" class="content-block awards">
               <div class="content-block-header awards">
                 <h2 class="main-heading-style-1">Award Badges</h2>
               </div>
@@ -414,11 +414,11 @@ overflow-x: hidden;
                 </div>
               </div>
             </div>
-            <div v-if="Workouts" class="content-block style-3">
+            <div v-if="Workouts && CompletedPrograms" class="content-block style-3">
               <div class="content-block-header">
                 <h2 class="main-heading-style-1">Completed Programs</h2>
               </div>
-              <a v-bind:href="`/program?program=${User.Completed_Record_ID_Programs_Completed[index]}&amp;signedin=true`" v-for="(item, index) in CompletedPrograms" v-bind:key="item" href="#" class="capsule-body style-1 w-inline-block">
+              <a v-bind:href="`/program.html?program=${User.Completed_Record_ID_Programs_Completed[index]}&amp;signedin=true`" v-for="(item, index) in CompletedPrograms" v-bind:key="item" href="#" class="capsule-body style-1 w-inline-block">
                 <div class="capsule-image-block image_src"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" v-bind:srcset="`${User.Image_Programs_Completed[index].url}`" alt="" class="full_thumbnail"></div>
                 <div class="capsule-header-content">
                   <div class="capsule-header-text">
@@ -432,7 +432,6 @@ overflow-x: hidden;
             <div class="info-block auto-margin">
               <a href="program-selection.html" class="button-style-3 w-button">Change Program</a>
               <a href="profile.html" class="button-style-5 w-button">Back</a>
-              <link rel="prerender" href="/profile">
             </div>
           </div>
         </div>
