--- a/password-reset.html
+++ b/password-reset.html
@@ -59,7 +59,7 @@
 		transform: scale(0.95);
 	}
 }
-</style>
+  </style>
   <style>
  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: white !important;
@@ -79,7 +79,17 @@
 .show_message { 
 	visibility: visible;
 }
-</style>
+  </style>
+  <!--Tapfiliate JavaScript-->
+  <script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+      (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+      (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+      tap('create', '47544-528ca5', { integration: "stripe" });
+      tap('detect');
+  </script>
+  <!--Tapfiliate JavaScript-->
 <link rel="manifest" href="manifest.json" />
 </head>
 <body>
