--- a/recipe-library.html
+++ b/recipe-library.html
@@ -60,14 +60,24 @@
 		transform: scale(0.95);
 	}
 }
-</style>
+  </style>
   <style>
 .hide { 
 	display: none !important;
 }
-</style>
-<link rel="manifest" href="manifest.json" />
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  </style>
+  <!--Tapfiliate JavaScript-->
+  <script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+      (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+      (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+      tap('create', '47544-528ca5', { integration: "stripe" });
+      tap('detect');
+  </script>
+  <!--Tapfiliate JavaScript-->
+  <link rel="manifest" href="manifest.json" />
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
   <div class="global-app-css w-embed">
