--- a/404.html
+++ b/404.html
@@ -61,6 +61,16 @@
 	}
 }
 </style>
+<!--Tapfiliate JavaScript-->
+<script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+      (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+      (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+      tap('create', '47544-528ca5', { integration: "stripe" });
+      tap('detect');
+</script>
+<!--Tapfiliate JavaScript-->
 </head>
 <body>
   <div class="app index">
