--- a/blog-post.html
+++ b/blog-post.html
@@ -59,7 +59,7 @@
 		transform: scale(0.95);
 	}
 }
-</style>
+  </style>
   <style>
 img { 
 	border: 0px, solid, transparent !important;
@@ -90,7 +90,17 @@ img {
       line-height: 20px;
     }
   }
-</style>
+  </style>
+  <!--Tapfiliate JavaScript-->
+  <script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+      (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+      (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+      tap('create', '47544-528ca5', { integration: "stripe" });
+      tap('detect');
+  </script>
+  <!--Tapfiliate JavaScript-->
 <link rel="manifest" href="manifest.json" />
 </head>
 <body>
