--- a/guides.html
+++ b/guides.html
@@ -59,7 +59,17 @@
 		transform: scale(0.95);
 	}
 }
-</style>
+  </style>
+  <!--Tapfiliate JavaScript-->
+  <script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+      (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+      (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+      tap('create', '47544-528ca5', { integration: "stripe" });
+      tap('detect');
+  </script>
+  <!--Tapfiliate JavaScript-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <style>
 .swiper-wrapper { 
@@ -68,7 +78,7 @@ align-items: center;
 .guide-slider { 
     overflow-x: hidden;
 }
-</style>
+  </style>
   <link rel="manifest" href="manifest.json" />
   <script src="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/js/member/userAuth.js" type="text/javascript"></script>
 </head>
