--- a/program-selection.html
+++ b/program-selection.html
@@ -59,7 +59,7 @@
 		transform: scale(0.95);
 	}
 }
-</style>
+  </style>
   <style>
 [wized-cloak-custom] {
   opacity: 0 !important;
@@ -67,8 +67,8 @@
 .app { 
 	transition: 1s linear 1s !important;	
 }
-</style>
-<style>
+  </style>
+  <style>
   [w-el="program_description"] p img { 
     max-height: 500px;
   }
@@ -96,6 +96,16 @@
       }
     }
   </style>
+  <!--Tapfiliate JavaScript-->
+  <script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+      (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+      (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+      tap('create', '47544-528ca5', { integration: "stripe" });
+      tap('detect');
+  </script>
+  <!--Tapfiliate JavaScript-->
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <!-- <style>
