--- a/workout-overview.html
+++ b/workout-overview.html
@@ -60,7 +60,7 @@
 		transform: scale(0.95);
 	}
 }
-</style>
+  </style>
   <style>
 	/*.content-block.tabs { 
   	display: block !important;
@@ -94,9 +94,19 @@
       line-height: 20px;
     }
   }
-</style>
-<link rel="manifest" href="manifest.json" />
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  </style>
+  <!--Tapfiliate JavaScript-->
+  <script src="https://script.tapfiliate.com/tapfiliate.js" type="text/javascript" async></script>
+  <script type="text/javascript">
+        (function(t,a,p){t.TapfiliateObject=a;t[a]=t[a]||function(){
+        (t[a].q=t[a].q||[]).push(arguments)}})(window,'tap');
+
+        tap('create', '47544-528ca5', { integration: "stripe" });
+        tap('detect');
+  </script>
+  <!--Tapfiliate JavaScript-->
+  <link rel="manifest" href="manifest.json" />
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
   <div class="global-app-css w-embed">
