--- a/program-hub.html
+++ b/program-hub.html
@@ -84,7 +84,7 @@
   </script>
   <!--Tapfiliate JavaScript-->
   <link rel="manifest" href="manifest.json" />
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
   
 </head>
 <body>
@@ -425,8 +425,9 @@ overflow-x: hidden;
                       && User.Completed_Workouts_Program.includes(week.Program[0])
                       && User.Completed_Workout_ID.some((id) => week.Workouts[index].includes(id)) 
                       && User.Completed_Workout_Week.includes(week.Week)
+                      && User.Completed_Workout_Week.length === 1
                       ? 'completed' : 'not_completed'" class="completed-icon"></div>
-                    </div>
+
                   </a>
                 </div>
               </div>
