--- a/program-hub.html
+++ b/program-hub.html
@@ -84,7 +84,7 @@
   </script>
   <!--Tapfiliate JavaScript-->
   <link rel="manifest" href="manifest.json" />
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
   
 </head>
 <body>
@@ -427,7 +427,7 @@ overflow-x: hidden;
                       && User.Completed_Workout_Week.includes(week.Week)
                       && User.Completed_Workout_Week.length === 1
                       ? 'completed' : 'not_completed'" class="completed-icon"></div>
-
+                    </div>
                   </a>
                 </div>
               </div>
