--- a/program-hub.html
+++ b/program-hub.html
@@ -401,7 +401,7 @@ overflow-x: hidden;
                       </div>
                     </div>
                     <div class="split-dynamic-text">
-                      <div class="generic-text-style-1 complete-amount">{{CompletedWorkouts[number].AmountCompleted}}</div>
+                      <div class="generic-text-style-1 complete-amount">{{CompletedWorkouts[number].completedCount}}</div>
                       <div class="generic-text-style-1">/</div>
                       <div class="generic-text-style-1 week-1-length">{{User.Q7[0]}}</div>
                       <div class="generic-text-style-1 left-complete-margin">Complete</div>
@@ -422,10 +422,7 @@ overflow-x: hidden;
                         <div w-el="complete_filter_week" class="generic-text-style-1 complete-week">HIIT Workout</div>
                       </div>
                       <div v-bind:class="User.Completed_Workout_ID !== undefined 
-                      && User.Completed_Workouts_Program.includes(week.Program[0])
-                      && User.Completed_Workout_ID.some((id) => week.Workouts[index].includes(id)) 
-                      && User.Completed_Workout_Week.includes(week.Week)
-                      
+                      && CompletedWorkouts[number].completeIndices[index] === true
                       ? 'completed' : 'not_completed'" class="completed-icon"></div>
                     </div>
                   </a>
