--- a/program-selection.html
+++ b/program-selection.html
@@ -20,6 +20,8 @@
   <script data-wized-id="ISnIcZEHtJQbNBpztLDV" src="https://embed.wized.com"></script>
   <!--  Custom  -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/native-jeremy/the-legends-config/css/styles-u17.css">
+  <script src="https://js.stripe.com/v3/"></script>
+
   <!--  Scroll Speed CSS -->
   <style>
 	html { 
