--- a/program-selection.html
+++ b/program-selection.html
@@ -354,7 +354,11 @@ overflow-x: hidden;
         <div class="modal-content">
           <p class="modal-body-copy">Finish setting up your account by proceeding to Stripe for payment details. You won't be charged until the end of your free trial, cancel at any time.<br></p>
         </div>
-        <a href="#" style="display: none;" id="stripe" data-w-id="d405c2e7-6ff4-d74f-4efe-4e3013ecf2dc" class="button-style-1 margin-top-xsmall w-button">New Stripe</a>
+        
+        <a href="#" style="display: none;" id="stripeMonthly" data-w-id="d405c2e7-6ff4-d74f-4efe-4e3013ecf2dc" class="button-style-1 margin-top-xsmall w-button">New Monthly</a>
+        <a href="#" style="display: none;" id="stripeQuarterly" data-w-id="d405c2e7-6ff4-d74f-4efe-4e3013ecf2dc" class="button-style-1 margin-top-xsmall w-button">New Quarterly</a>
+        <a href="#" style="display: none;" id="stripeYearly" data-w-id="d405c2e7-6ff4-d74f-4efe-4e3013ecf2dc" class="button-style-1 margin-top-xsmall w-button">New Yearly</a>
+
         <div class="value_box mt_sml">
           <a href="#" id="annualBuyLink" w-el="program_add_anually" data-w-id="ca66fbe8-a045-f33b-4715-0a9e548f00f9" class="button-style-1 no-margin w-button">$119.88 annually</a>
           <div class="value_circle_badge">
