--- a/program-selection.html
+++ b/program-selection.html
@@ -363,6 +363,7 @@ overflow-x: hidden;
             <div class="value_text_style">Best <br>Value</div>
           </div>
         </div>
+        <!--New Stripe Checkout 09/03/2024-->
         <div id="stripeQuarterly">
           <a href="#" id="quarterlyBuyLink" w-el="program_add_quarterly" data-w-id="00139255-0b59-53b4-ab69-24047717006e" class="button-style-1 margin-top-xsmall w-button">$47.99 quarterly</a>
         </div>
