--- a/program-selection.html
+++ b/program-selection.html
@@ -356,7 +356,7 @@ overflow-x: hidden;
         </div>
 
         <div class="value_box mt_sml">
-          <div id="stripeYearly">
+          <div id="stripeYearly" class="full_width">
             <a href="#" id="annualBuyLink" w-el="program_add_anually" data-w-id="ca66fbe8-a045-f33b-4715-0a9e548f00f9" class="button-style-1 no-margin w-button">$119.88 annually</a>
           </div>
           <div class="value_circle_badge">
@@ -364,10 +364,10 @@ overflow-x: hidden;
           </div>
         </div>
         <!--New Stripe Checkout 09/03/2024-->
-        <div id="stripeQuarterly">
+        <div id="stripeQuarterly" class="full_width">
           <a href="#" id="quarterlyBuyLink" w-el="program_add_quarterly" data-w-id="00139255-0b59-53b4-ab69-24047717006e" class="button-style-1 margin-top-xsmall w-button">$47.99 quarterly</a>
         </div>
-        <div id="stripeMonthly">
+        <div id="stripeMonthly" class="full_width">
           <a href="#" id="monthlyBuyLink" w-el="program_add_monthly" data-w-id="d405c2e7-6ff4-d74f-4efe-4e3013ecf2dc" class="button-style-1 margin-top-xsmall w-button">$19.99 monthly</a>
         </div>
       </div>
