--- a/workout.html
+++ b/workout.html
@@ -284,7 +284,7 @@
                   Congratulations! Click the button below to start your recovery.
                 </p>
               </div>
-              <a id="recoveryLink" v-bind:href="`/recovery.html?recovery=${workout.recoveryLink[0]}`"
+              <a id="recoveryLink" v-bind:href="`/recovery.html?recovery=${workout.recoveryLink}`"
                 class="finish_button margin-top-xsmall w-button">start recovery</a>
               <a href="program-hub.html"
                 class="finish_button margin-top-xxsmall w-button">go to program hub</a>
