--- a/program-hub.html
+++ b/program-hub.html
@@ -466,7 +466,7 @@ overflow-x: hidden;
         </div>
       </div>
     </div>
-    <div id="programModal" v-if="programPop" class="modal-condition on">
+    <div id="programModal" v-if="programPop" class="modal-condition on" style="display: flex !important;">
       <div class="modal-body">
         <div class="modal-header">
           <h2 class="modal-heading">You have completed your program?</h2>
