--- a/workout.html
+++ b/workout.html
@@ -145,7 +145,7 @@
   </script>
   <!--Tapfiliate JavaScript-->
   <link rel="manifest" href="manifest.json" />
-  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
   <div id="app" w-el="load_app" class="app">
