--- a/program-hub.html
+++ b/program-hub.html
@@ -476,7 +476,7 @@ overflow-x: hidden;
         </div>
         <a w-el="trigger_program_completion" data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb10cd" :href="`${recomendedProgram}`" class="button-style-1 w-button">recommended program</a>
         <a w-el="trigger_program_completion" data-w-id="856cac69-5a7c-6423-375a-b8f5aa7d2a9c" href="questionnaire-update.html" class="button-style-1 mt_xsml w-button">questionnaire</a>
-        <a data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb10cf" href="#" class="button-style-5 w-button">back</a>
+        <a data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb10cf" href="#" class="button-style-5 w-button" @click="popupOff">back</a>
       </div>
     </div>
   </div>
