--- a/workout-overview.html
+++ b/workout-overview.html
@@ -376,8 +376,8 @@ c0-0.1,0-0.2,0-0.3L1.8,14C0.7,12.5,0,10.7,0,8.8C0,3.9,4.2,0,9.4,0s9.4,3.9,9.4,8.
                 <div class="info-block-header">
                   <div w-el="workout_overview_title" class="main-heading-style-6 center-align">Loading...</div>
                 </div>
-                <a :href="`workout.html?program=${Program}&week=${Week}&workout=${Workout}&round=0&recovery=${Recovery}&done=${Done}`" class="button-style-1 bold w-button">Warm up &amp; Workout</a>
-                <a :href="`workout.html?program=${Program}&week=${Week}&workout=${Workout}&round=1&recovery=${Recovery}&done=${Done}`" class="button-style-6 hide w-button">Skip the warmup</a>
+                <a :href="`workout.html?program=${Program}&week=${Week}&workout=${Workout}&round=0&recovery=${Recovery}&name=${Name}&done=${Done}`" class="button-style-1 bold w-button">Warm up &amp; Workout</a>
+                <a :href="`workout.html?program=${Program}&week=${Week}&workout=${Workout}&round=1&recovery=${Recovery}&name=${Name}&done=${Done}`" class="button-style-6 hide w-button">Skip the warmup</a>
                 <div class="split-dynamic-text center margin-top">
                   <div class="generic-text-style-2 margin-right-split-dnyamic-text">duration</div>
                   <div w-el="workout_duration" class="generic-text-style-2 center-align">Loading...</div>
