--- a/program-hub.html
+++ b/program-hub.html
@@ -431,6 +431,7 @@ overflow-x: hidden;
               </div>
               <a data-w-id="63716cf2-b607-3d66-f5f9-5dd840fb10a6" href="workout-overview.html" class="button-style-1 hide w-button">Start my next workout</a>
               <a href="workout-library.html" class="button-style-3 hide w-button">Pick your own workout</a>
+              <a href="workout-library.html" class="button-style-3 hide w-button" style="border-color: #397234;" @click="popupOff">I’ve completed this program</a>
             </div>
             <div style="display:none;opacity:0" class="content tab-2">
               <div class="accordion style-1">
