--- a/guides.html
+++ b/guides.html
@@ -298,7 +298,7 @@ align-items: center;
           <link rel="prerender" href="/messages">
         </div>
       </div>
-      <div class="app-head guide-page">
+      <div class="app-head guide-page" style="min-height: 100vh !important; height: auto !important;">
         <div class="app-head-content guide">
           <div class="content slider-content">
             <div class="guide-slider">
